# ask-e9y

./: .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  README_MIGRATIONS.md  alembic.ini  docker-compose.yml  init-db.py  pyproject.toml  railway.json  requirements.txt  run.py  setup_project.sh  start.py  start.sh
alembic/: README  env.py
alembic/versions/: 1c2def96078e_create_api_metrics_table.py  690d444fe8dc_create_query_id_mappings_table.py  7494a737b210_add_query_cache_table.py  a0792c896380_add_prompt_columns_to_api_metrics.py  e008f89c640d_add_query_id_column.py  ee218ec76260_add_overeligibility_query.py
app/: config.py  database.py  debug_endpoints.py  main.py
app/models/: requests.py  responses.py
app/routers/: analysis.py  metrics.py  query.py  schema.py
app/services/: cache_service.py  chroma_service.py  embedding_service.py  example_retrieval_service.py  explanation_service.py  feedback_service.py  gemini_llm.py  llm_service.py  metrics_service.py  openai_llm.py  prompt_analyzer.py  prompt_builder.py  query_service.py  schema_embedding_service.py  schema_info_service.py  schema_service.py  sql_executor.py
app/utils/: db_utils.py  json_encoder.py  schema.py  (+4 more)
db/: apply_railway_migrations.sh  check_db.sh  create_db.sh  init-db.py  init-db.sh  sample_data.sql  schema.sql  schema_old.sql
scripts/: MIGRATIONS_README.md  apply_local_alembic_migrations.sh  apply_railway_alembic_migrations.sh  apply_railway_api_migrations.sh  apply_railway_migrations.sh  check_railway_db_status.sh  combined_migrations.sql
tests/: test_orchestrator.py
(+19 files in other folders)
